MT Line wrap (and minor xml correction)

--- a/MT-Manuscript-archival/style-mt3-html.css
+++ b/MT-Manuscript-archival/style-mt3-html.css
@@ -3,9 +3,9 @@ div.transcription.style-mt3-html {
 	padding-right:4.2em;
 }
 div.transcription.style-mt3-html .div {
-	white-space:nowrap; /* 1) value can be nowrap or normal */
+	white-space:normal; /* 1) value can be nowrap or normal */
 	/* 2) note: if you select nowrap and it's going over the line number, don't worry. I'll fix that. Just tell me the places to look for issues. normal will break lines */
-	width:32.8em; /* 3) if you select normal, adjust number to determine when text wraps. Smaller number = more narrow page, etc. */
+	width:40em; /* 3) if you select normal, adjust number to determine when text wraps. Smaller number = more narrow page, etc. */
 	padding-right:3.2em;
 }
 div.transcription.style-mt3-html .linenumber {
